code cleanup, rework on Sort method calls